# examples

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  MODULE.bazel  README.md
kotlin/common/: BUILD
kotlin/common/src/main/kotlin/com/wgtwo/example/: BaseConfig.kt  Extensions.kt
kotlin/consents/: BUILD  README.md
kotlin/consents/src/main/kotlin/com/wgtwo/example/: ListConsentsForProduct.kt  StreamConsentEvents.kt
kotlin/sms/: BUILD  README.md
kotlin/sms/src/main/kotlin/com/wgtwo/example/sms/: ReceiveSms.kt  SendSms.kt
sms-bot/: BUILD
sms-bot/src/main/kotlin/com/wgtwo/example/smsbot/: Main.kt
