"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_kotlin", version = "2.1.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.grpc:grpc-netty-shaded:1.70.0",
        "build.buf.gen:wgtwo_wgtwoapis_protocolbuffers_kotlin:29.3.0.1.20250211103443.865631c9c243",
        "build.buf.gen:wgtwo_wgtwoapis_grpc_kotlin:1.4.1.1.20250211103443.865631c9c243",
        "com.github.ajalt.clikt:clikt:5.0.3",
        "com.wgtwo.api:auth:0.0.5",
        "com.google.protobuf:protobuf-java:4.29.3",
    ],
    fetch_sources = True,
    repositories = [
        "http://uk.maven.org/maven2",
        "https://jcenter.bintray.com/",
        "https://buf.build/gen/maven",
    ],
)
use_repo(maven, "maven")
